来了一只萝莉

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <div>这是一个首页</div>
     <!-- 来了一个美女 -->
     <img src="./tong1tu5.jpg" alt="">
+    <!-- 来了一个萝莉 -->
+    <img src="./tong3tu1.jpg" alt="">
 </body>
 </html>
